force-app/main/default/objects/ContractService__c/ContractService__c.object-meta.xml
<CustomObject>
    <label>契約サービス</label>
    <nameField>
        <label>契約サービス名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>契約サービス</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>