force-app/main/default/objects/ContractService__c/fields/FirstOrderedHistory__c.field-meta.xml
<CustomField>
    <fullName>FirstOrderedHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最初の契約履歴（受注済）</label>
    <referenceTo>ContractHistory__c</referenceTo>
    <relationshipLabel>契約サービス（最初受注済）</relationshipLabel>
    <relationshipName>ContractServicesAsFirstOrdered</relationshipName>
    <type>Lookup</type>
</CustomField>