force-app/main/default/objects/ContractService__c/fields/LatestOrderedHistory__c.field-meta.xml
<CustomField>
    <fullName>LatestOrderedHistory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>最新の契約履歴（受注済）</label>
    <referenceTo>ContractHistory__c</referenceTo>
    <relationshipLabel>契約サービス（最新受注済）</relationshipLabel>
    <relationshipName>ContractServicesAsLatestOrdered</relationshipName>
    <type>Lookup</type>
</CustomField>