force-app/main/default/objects/ContractService__c/fields/ServiceEndDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceEndDate__c</fullName>
    <formula>LatestOrderedHistory__r.CurrentTermEndDate__c</formula>
    <label>サービス終了日</label>
    <type>Date</type>
</CustomField>