force-app/main/default/objects/ContractService__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>CASE(
  LatestOrderedHistory__r.Type__c,
  &quot;New&quot;, &quot;Active&quot;,
  &quot;Change&quot;, &quot;Active&quot;,
  &quot;Renew&quot;, &quot;Active&quot;,
  &quot;Cancel&quot;, &quot;Pause&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ステータス</label>
    <type>Text</type>
</CustomField>